--- a/index.html
+++ b/index.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Document</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
+    <body>
+        <div class="app"></div>
+    </body>
 
-<body>
-    <div class="app"></div>
-</body>
+    <script src="index.js"></script>
 
-<script>
-    const app = document.querySelector('.app');
-    window.application = {
-        blocks: {},
-        screens: {},
-        renderScreen(screenName) {
-            app.textContent = '';
-            this.screens[screenName]();
-        },
-        renderBlock(blockName, container) {
-            this.blocks[blockName](container);
-        },
-        timers: [],
-        difficulty: undefined,
-    }
+    <script src="screens/difficulty.js"></script>
+    <script src="screens/game.js"></script>
 
-</script>
-
-<script src="screens/difficulty.js"></script>
-<script src="screens/game.js"></script>
-
-<script>
-    window.application.renderScreen('difficulty');
-</script>
+    <script>
+        window.application.renderScreen("difficulty");
+    </script>
 </html>
