game screen creation, card generation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="screens/difficulty.js"></script>
     <script src="screens/game.js"></script>
+    <script src="card-collection.js"></script>
 
     <script>
         window.application.renderScreen("difficulty");
