--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
         <title>Document</title>
     </head>
 
@@ -12,11 +12,11 @@
         <div class="app"></div>
     </body>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 
-    <script src="screens/difficulty.js"></script>
-    <script src="screens/game.js"></script>
-    <script src="card-collection.js"></script>
+    <script src="./screens/difficulty.js"></script>
+    <script src="./screens/game.js"></script>
+    <script src="./card-collection.js"></script>
 
     <script>
         window.application.renderScreen("difficulty");
