--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     </body>
 
     <script src="./index.js"></script>
-
+    <script src="./globals.js"></script>
     <script src="./screens/difficulty.js"></script>
     <script src="./screens/game.js"></script>
     <script src="./card-collection.js"></script>
